# conversor-horas-trabalho

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml  spec.md
.github/workflows/: pipeline.yml
conversor_horas_trabalho/: cli.py  converte_horas.py  converte_horas_semanais.py  total_horas_mes.py
docs/: index.md
docs/api/: converte_horas.md  converte_horas_semanais.md  total_horas_mes.md
docs/templates/: instalacao.md
tests/: test_cli.py  test_converte_horas.py  test_converte_horas_semanais.py  test_total_horas_mes.py
